# seadexerr

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
src/: anilist.rs  config.rs  http.rs  main.rs  mapping.rs  radarr.rs  releases.rs  sonarr.rs  torznab.rs
